@@ -4,6 +4,7 @@ Revision history for cif-router
     - added query api restriction (eg: domain/malware, infrastructure/botnet, etc...)
     - merged in libcif
     - renamed REST driver to generic HTTP driver
+    - fixed the write authorization
 
 0.99.03 2012-07031
     - bugfixes
